# canbus-visualizer

./: Cargo.toml  README.md  config.toml  tags
data/: anz.dbc  anzen.dbc  config.yaml
documentation/: book.toml
src/: build.rs  configs.rs  main.rs
src/configs/: systemvalues.rs
